changes to fix alignment and overlap on search page
git-svn-id: file:///project/repositories/svn2/schenker/trunk@3444 7437ebc0-4e4f-0410-a91c-e60b824a4b0e

--- a/xmod/webapp/root/_a/c/default.css
+++ b/xmod/webapp/root/_a/c/default.css
@@ -2221,11 +2221,10 @@ td#content div {
 }
 
 #mainContent form label {
-    float: left;
     width: 15em;
     text-align: right;
     padding: 3px 15px 0 0;
-    vertical-align: top;
+    vertical-align: middle;
     font-size: 80%;
     font-weight: bold
 }
